# pydeps-takehome

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
apps/job-a/: Dockerfile  app.py
apps/job-b/: Dockerfile  app.py
apps/job-c/: Dockerfile  app.py
apps/server-one/: Dockerfile  app.py
apps/server-two/: Dockerfile  app.py
lib/verse/: common.py
scripts/: main.py
tests/: test_runtime.py
tests/verse/: test_common.py
