[project]
name = "tc-interview-problem-python-deps"
version = "0.1.0"
description = "Verse Python monorepo takehome"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "numpy==2.2.1",
    "pandas==2.2.3",
    "psutil==6.1.1",
    "structlog==24.4.0",
    "requests==2.31.0",
]

[dependency-groups]
dev = ["mypy==1.10.0", "ruff==0.4.5"]
test = ["pytest==8.3.4", "pytest-cov==6.0.0", "pytest-mock==3.14.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["lib", "apps"]

[tool.setuptools.package-dir]
"" = "."  # root directory
